# MIPF

./: .gitignore  CMakeLists - 副本.txt  CMakeLists.txt  ChangeLog.txt  license.txt  plugins.txt
Applications/: CMakeLists.txt
Applications/CTKTest/: CMakeLists.txt  main.cxx
Applications/MapperTest/: CMakeLists.txt  mitkContourMapper2DTest.cpp
Applications/ModuleGenerator/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  main.cxx  template.h  template.h~RF1a6936d9.TMP
Applications/PluginGenerator/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  main.cxx  template.h
Applications/RobotControlApp/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  RobotControl.cpp_  RobotControl.h_  main.cxx
Applications/TestApp/: CMakeLists.txt  Test.cpp  Widget.ui.autosave  widget.cpp  widget.h
Applications/WorkBench/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  MultiViews.h  SplashWindow.cpp  main.cxx
Modules/: CMakeLists.txt
Modules/ITKVTKHelpers/: CMakeLists.txt  ITKVTK_Helpers.cpp  ITKVTK_Helpers.h  ITKVTK_Helpers.hpp  ITK_Helpers.h  ITK_Helpers.hpp  VTK_Helpers.cpp  VTK_Helpers.h
Modules/MathUtil/: CMakeLists.txt  CQF_MathUtilCom.cpp  IQF_MathUtil.h  MathUtil.cpp
Modules/Mipf_Module_CVA/: CMakeLists.txt  CQF_CVACom.cxx  CQF_CVACom.h  CQF_CVACommand.cxx  CQF_CVACommand.h  CQF_CVAMessage.cxx  CQF_CVAMessage.h  CQF_CVAlgorithms.cpp  CQF_CVAlgorithms.h  CQF_DSATool.cpp  CQF_DSATool.h  GuideWireMoulding.cpp  GuideWireMoulding.h  imageAlgorithm.cxx  imageAlgorithm.h  mathutil.cxx  mathutil.h
Modules/Mipf_Module_Core/: CMakeLists.txt  CQF_CoreCom.cxx  CQF_CoreCom.h  CQF_ObjectFactory.cpp  CQF_ObjectFactory.h  ObjectFactory.h
Modules/Mipf_Module_MathUtil/: CMakeLists.txt  CQF_MathUtilCom.cpp  CQF_MathUtilCom.h  IQF_MathUtil.h  MathUtil.cpp  MathUtil.h
Modules/Mipf_Module_MitkImageUtils/: CMakeLists.txt  CQF_MitkImageUtilsCom.cxx  CQF_MitkImageUtilsCom.h  ImageCropper.cpp  ImageCropper.h  ImageReslice.cpp  ImageReslice.h
Modules/Mipf_Module_MitkMain/: CMakeLists.txt  CQF_MainCommand.cpp  CQF_MainCommand.h  CQF_MitkDataManager.cpp  CQF_MitkDataManager.h  CQF_MitkDisplayOption.cpp  CQF_MitkDisplayOption.h  CQF_MitkIO.cpp  CQF_MitkIO.h  CQF_MitkInit.cpp  CQF_MitkInit.h  CQF_MitkMainCom.cpp  CQF_MitkMainCom.h  CQF_MitkReference.cpp  CQF_MitkReference.h  CQF_MitkRenderWindow.cpp  CQF_MitkRenderWindow.h  MitkException.cpp  MitkProjectIO.cpp  MitkProjectIO.h
Modules/Mipf_Module_MitkSegmentation/: CMakeLists.txt  CMitkSegmentation.cpp  CMitkSegmentation.h  CQF_MainCommand.cpp  CQF_MainCommand.h  CQF_MainMessage.cpp  CQF_MainMessage.h  CQF_ManualSegmentation.cpp  CQF_ManualSegmentation.h  CQF_MitkSegmentationCom.cpp  CQF_MitkSegmentationCom.h  CQF_SurfaceTool.cpp  CQF_SurfaceTool.h  tools.txt
Modules/Mipf_Module_MitkStd/: CMakeLists.txt  CQF_MitkStdCom.cxx  CQF_MitkStdCom.h  CQF_MitkStdCommand.cxx  CQF_MitkStdCommand.h  CQF_MitkStdMessage.cxx  CQF_MitkStdMessage.h  PointList.cpp  PointList.h
Modules/Mipf_Module_Segmentation/: CMakeLists.txt  CQF_SegmentationCom.cxx  CQF_SegmentationCom.h  CQF_SegmentationFactory.cpp  CQF_SegmentationFactory.h
Modules/Mipf_Module_Segmentation - 副本/: CMakeLists.txt  CQF_SegmentationCom.h  CQF_SegmentationFactory.cpp  CQF_SegmentationFactory.h
Modules/Mipf_Module_SliceBySliceTracking/: CMakeLists.txt  CQF_SliceBySliceTrackingCom.cpp  CQF_SliceBySliceTrackingCom.h  IQF_SliceBySliceTracking.h  SliceBySliceBlobTracking.cpp  SliceBySliceBlobTracking.h
Modules/Mipf_Module_Test/: CMakeLists.txt  CQF_TestCom.cxx  CQF_TestCom.h  CQF_TestCommand.cxx  CQF_TestCommand.h  CQF_TestMessage.cxx  CQF_TestMessage.h  Test.h
Modules/Mipf_Module_TubularTracking/: CMakeLists.txt  CQF_TubularTrackingCom.cpp  IQF_TubularTracking.h  TubularTracking.cpp  TubularTracking.h  tubulartracking_global.h  util.cpp  vesseldata.cpp  vesseldata.h  vesselgraph.cpp  vesselgraph.h  vesselprofile.h  vesseltemplate.h  vesseltracker.cpp  vesseltracker.h
Modules/Mipf_Module_VesselTools/: CMakeLists.txt  CQF_VesselToolsCom.cxx  CQF_VesselToolsCom.h  CenterLineExtraction.cpp  CenterLineExtraction.h  VesselSegmentation.cpp  VesselSegmentation.h
Modules/MitkCoreExt/: CMakeLists.txt  CutImplementation.cpp  files.cmake
Modules/MitkMain/: CMakeLists.txt  CQF_MitkMainCom.cpp  CQF_MitkMainCom.h  CQF_MitkReference.cpp  CQF_MitkReference.h  CQF_MitkRenderWindow.cpp  CQF_MitkRenderWindow.h
Modules/MitkPlugin/: Activator_Base.h  CMakeLists.txt  MitkPluginView.h  PluginView.h
Modules/SliceBySliceTracking/: CMakeLists.txt  IQF_SliceBySliceTracking.h
Modules/Test/: CMakeLists.txt  CQF_TestCom.cxx  CQF_TestCom.h  CQF_TestCommand.cxx
Modules/TubularTracking/: CMakeLists.txt  CQF_TubularTrackingCom.cpp  CQF_TubularTrackingCom.h  impatch.h  util.h  vesseltemplate.cpp  vesseltemplatetracker.cpp  vesseltemplatetracker.h
Modules/include/: AlgorithmsConfig.h  CMakeLists.txt  IQF_ITKAlgorithmSet.h  ITKBasicAlgorithms.h  ITKImageTypeDef.h  ImageBox.h  ImageVector.h  MathUtil.h  MitkException.h  Parameter.h  ParameterField.h  QStringUtils.h  QfResult.h  VTKImageProperties.h  Vector3.h  XMarker.h  XMarkerGraph.h
Modules/interface/: IQF_Object.h
Plugins/: CMakeLists.txt
Plugins/ImageRegistrationView/: CMakeLists.txt  ImageRegistrationView.cxx  ImageRegistrationView.h  ImageRegistrationViewActivator.cpp  ImageRegistrationViewActivator.h  Registration_MI.h  Registration_MI.hpp
Plugins/ItkAlgorithmSetView/: CMakeLists.txt  ItkAlgorithmSetViewActivator.cpp  ItkAlgorithmSetViewActivator.h
Plugins/MipfPluginBase/: CMakeLists.txt  MitkPluginView.cpp  MitkPluginView.h  PluginView.cpp  PluginView.h
Plugins/Mipf_Plugin_ASM/: ASMView.cxx  ASMView.h  ASMView.ui  CMakeLists.txt  GenerateTrainingSetView.cpp  GenerateTrainingSetView.h  GenerateTrainingSetView.ui  LSASMSegmentation.cpp  LSASMSegmentation.h  LSSegmentation.cpp  LSSegmentation.h  LevelSetASMSegmentationView.cpp  LevelSetASMSegmentationView.h  LevelSetASMSegmentationView.ui  LevelSetSegmentationView.cpp  LevelSetSegmentationView.h  LevelSetSegmentationView.ui  Mipf_Plugin_ASMActivator.cxx  Mipf_Plugin_ASMActivator.h  ShapeDrawerView.cpp  (+5 more)
(+679 files in other folders)
